<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/settings_name"
            android:textSize="42sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:text="@string/back" />
    </LinearLayout>

    <TextView
        android:id="@+id/calibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/calibration_name"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/load_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/load_cal" />

        <Button
            android:id="@+id/save_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/save_cal" />
    </LinearLayout>

    <TextView
        android:id="@+id/cal_weighting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/calibration_curve"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/cal_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:checkedButton="@+id/cal_lin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cal_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="A" />

        <RadioButton
            android:id="@+id/cal_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C" />

        <RadioButton
            android:id="@+id/cal_lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Lin" />
    </RadioGroup>

    <TextView
        android:id="@+id/lex8_weighting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/lex8_weighting"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/lex8_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:checkedButton="@+id/lex8_a"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/lex8_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="A" />

        <RadioButton
            android:id="@+id/lex8_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C" />

        <RadioButton
            android:id="@+id/lex8_lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Lin" />
    </RadioGroup>

    <TextView
        android:id="@+id/SPL_weighting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/spl_curve"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/SPL_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:checkedButton="@+id/spl_a"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/spl_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="A" />

        <RadioButton
            android:id="@+id/spl_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C" />

        <RadioButton
            android:id="@+id/spl_lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Lin" />
    </RadioGroup>

    <TextView
        android:id="@+id/peak_weighting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/peak_curve"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/peak_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:checkedButton="@+id/peak_c"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/peak_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="A" />

        <RadioButton
            android:id="@+id/peak_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C" />

        <RadioButton
            android:id="@+id/peak_lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Lin" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/reset_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/reset"
        android:textSize="18sp" />
</LinearLayout>