<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/calibration_name"
        android:textSize="42sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amplitude_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="7"
            android:gravity="right|center_horizontal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/amplitude_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_weight="8"
            android:text="@string/dB"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/measured_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/measured" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/measured_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:inputType="textPersonName"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/measured_unit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:gravity="left|center_vertical"
                    android:text="@string/dB"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reference_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/reference" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/reference_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/reference_unit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:gravity="left|center_vertical"
                    android:text="@string/dB"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/get_value"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="144dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/get_value"
            app:layout_constraintBottom_toTopOf="@+id/apply"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/apply"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next_point"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="144dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:text="@string/next_point"
            app:layout_constraintBottom_toTopOf="@+id/apply"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/averaging_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/averaging_time"
            app:layout_constraintEnd_toStartOf="@+id/next_point"
            app:layout_constraintStart_toEndOf="@+id/get_value"
            app:layout_constraintTop_toBottomOf="@+id/get_value" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/averaging_time"
            app:layout_constraintStart_toStartOf="@+id/averaging_time"
            app:layout_constraintTop_toBottomOf="@+id/averaging_time">

            <RadioButton
                android:id="@+id/one_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_s" />

            <RadioButton
                android:id="@+id/two_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/two_s" />

            <RadioButton
                android:id="@+id/five_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_s" />
        </RadioGroup>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>