<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="15"
            android:text="@string/app_name"
            android:textSize="42sp" />

        <ImageButton
            android:id="@+id/options_button"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/options_menu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lex8_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center"
            android:text="@string/Leq"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lex8_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical|center_horizontal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lex8_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/dB"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/lex8_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@color/colorGood" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/spl_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center"
            android:text="@string/SPL"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/spl_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical|center_horizontal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/spl_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/dB"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/spl_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_weight="1"
            app:srcCompat="@color/colorGood" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="642dp">

        <TextView
            android:id="@+id/peak_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center"
            android:text="@string/peak"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/peak_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/peak_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/dB"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/peak_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@color/colorGood" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/calibrate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:text="@string/calibrate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>